--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,8 @@ minecraft_version = 1.19.2
 fabric_loader_version = 0.14.11
 fabric_api_version = 0.67.0+1.19.2
 
+yarn_mappings=1.19.2+build.28
+
 # Mappings
 # https://lambdaurora.dev/tools/import_quilt.html
 qm_version = 21
