--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Mod Info
-maven_group = com.example
-archives_base_name = modid
+maven_group = ru.creatopico
+archives_base_name = chunk_have_ore_too
 mod_version = 0.0.1
 
 minecraft_version = 1.19.2
@@ -20,6 +20,8 @@ qm_version = 21
 # https://parchmentmc.org/docs/getting-started
 parchment_version = 2022.11.27
 
+owo_version = 0.9.3+1.19
+
 # Create
 # https://modrinth.com/mod/create-fabric/versions
 create_version = 0.5.0.g-837+1.19.2
@@ -27,7 +29,7 @@ create_version = 0.5.0.g-837+1.19.2
 # Development QOL
 # Create supports all 3 recipe viewers: JEI, REI, and EMI. This decides which is enabled at runtime.
 # set to disabled to have none of them.
-recipe_viewer = unspecified
+recipe_viewer = EMI
 # JEI - https://www.curseforge.com/minecraft/mc-mods/jei/files/all
 jei_version = 11.5.2.1007
 # REI - https://modrinth.com/mod/roughly-enough-items/versions
